--- a/infrastructure/kratix/github-credentials.yaml
+++ b/infrastructure/kratix/github-credentials.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  username: Z2Fza2luMQ==  # gaskin1
-  password: Z2hwX1BMSkdWWWV3SmR1VjlRalQ3bXRlNWd6NlFvdDVSQzNMemsyTQ==  # token
+  username: aW5mcmFmb3JnZQ==  # infraforge
+  password: Z2hwX3F4aEdnWW5adlBpM2czRVVHNGR3VVJYZ2hVd2FjZzNGSEFhQw==  # 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
 ---
 apiVersion: v1
 kind: Secret
@@ -15,5 +15,5 @@ metadata:
   namespace: kratix-platform-system
 type: Opaque
 data:
-  username: Z2Fza2luMQ==  # gaskin1
-  password: Z2hwX1BMSkdWWWV3SmR1VjlRalQ3bXRlNWd6NlFvdDVSQzNMemsyTQ==  # token
+  username: aW5mcmFmb3JnZQ==  # infraforge
+  password: Z2hwX3F4aEdnWW5adlBpM2czRVVHNGR3VVJYZ2hVd2FjZzNGSEFhQw==  # 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
