--- a/infrastructure/argocd/github-repo-secret.yaml
+++ b/infrastructure/argocd/github-repo-secret.yaml
@@ -8,6 +8,6 @@ metadata:
 type: Opaque
 data:
   type: Z2l0  # base64 of "git"
-  url: aHR0cHM6Ly9naXRodWIuY29tL2dhc2tpbjEvUGFhUy1QbGF0Zm9ybQ==  # base64 of URL
-  password: Z2hwX1BMSkdWWWV3SmR1VjlRalQ3bXRlNWd6NlFvdDVSQzNMemsyTQ==
-  username: bm90LXVzZWQ=  # base64 of "not-used"
+  url: aHR0cHM6Ly9naXRodWIuY29tL05pbWJ1c1Byb1RjaC9QYWFTLVBsYXRmb3Jt  # https://github.com/NimbusProTch/PaaS-Platform
+  password: Z2hwX3F4aEdnWW5adlBpM2czRVVHNGR3VVJYZ2hVd2FjZzNGSEFhQw==  # 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
+  username: aW5mcmFmb3JnZQ==  # infraforge
