--- a/infrastructure/argocd/github-repo-secret.yaml
+++ b/infrastructure/argocd/github-repo-secret.yaml
@@ -9,5 +9,5 @@ type: Opaque
 data:
   type: Z2l0  # base64 of "git"
   url: aHR0cHM6Ly9naXRodWIuY29tL05pbWJ1c1Byb1RjaC9QYWFTLVBsYXRmb3Jt  # https://github.com/NimbusProTch/PaaS-Platform
-  password: Z2hwX3F4aEdnWW5adlBpM2czRVVHNGR3VVJYZ2hVd2FjZzNGSEFhQw==  # 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
-  username: aW5mcmFmb3JnZQ==  # infraforge
+  password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
+  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
