--- a/infrastructure/kratix/github-credentials.yaml
+++ b/infrastructure/kratix/github-credentials.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  username: aW5mcmFmb3JnZQ==  # infraforge
-  password: Z2hwX3F4aEdnWW5adlBpM2czRVVHNGR3VVJYZ2hVd2FjZzNGSEFhQw==  # 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
+  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
+  password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
 ---
 apiVersion: v1
 kind: Secret
@@ -15,5 +15,5 @@ metadata:
   namespace: kratix-platform-system
 type: Opaque
 data:
-  username: aW5mcmFmb3JnZQ==  # infraforge
-  password: Z2hwX3F4aEdnWW5adlBpM2czRVVHNGR3VVJYZ2hVd2FjZzNGSEFhQw==  # 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
+  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
+  password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
