--- a/infrastructure/argocd/github-repo-secret.yaml
+++ b/infrastructure/argocd/github-repo-secret.yaml
@@ -10,4 +10,4 @@ data:
   type: Z2l0  # base64 of "git"
   url: aHR0cHM6Ly9naXRodWIuY29tL05pbWJ1c1Byb1RjaC9QYWFTLVBsYXRmb3Jt  # https://github.com/NimbusProTch/PaaS-Platform
   password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
-  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
+  username: eC1hY2Nlc3MtdG9rZW4=  # x-access-token
