--- a/infrastructure/kratix/github-credentials.yaml
+++ b/infrastructure/kratix/github-credentials.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
+  username: eC1hY2Nlc3MtdG9rZW4=  # x-access-token
   password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
 ---
 apiVersion: v1
@@ -15,5 +15,5 @@ metadata:
   namespace: kratix-platform-system
 type: Opaque
 data:
-  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
+  username: eC1hY2Nlc3MtdG9rZW4=  # x-access-token
   password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
