--- a/infrastructure/kratix/github-state-store.yaml
+++ b/infrastructure/kratix/github-state-store.yaml
@@ -4,7 +4,10 @@ metadata:
   name: github-store
   namespace: kratix-platform-system
 spec:
-  authMethod: none
+  authMethod: basicAuth
   branch: main
   path: manifests
+  secretRef:
+    name: github-credentials
+    namespace: kratix-platform-system
   url: https://github.com/NimbusProTch/PaaS-Platform.git
