Add: [manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml manifests/platform-cluster/apps/dev/business-apps/nginx/Chart.yaml manifests/platform-cluster/apps/dev/business-apps/nginx/values.yaml manifests/platform-cluster/appsets/dev/business-appset.yaml manifests/platform-cluster/appsets/dev/operator-appset.yaml manifests/platform-cluster/appsets/dev/platform-appset.yaml manifests/platform-cluster/argocd/dev/project.yaml manifests/platform-cluster/metadata.yaml]

--- a/manifests/platform-cluster/appsets/dev/operator-appset.yaml
+++ b/manifests/platform-cluster/appsets/dev/operator-appset.yaml
@@ -12,7 +12,7 @@ spec:
         revision: main
   template:
     metadata:
-      name: dev-operator-{{.path.basenameNormalized}}
+      name: dev-operator-{{.path.basename}}
       namespace: infraforge-argocd
     spec:
       destination:
