--- a/manifests/platform-cluster/appsets/dev/platform-appset.yaml
+++ b/manifests/platform-cluster/appsets/dev/platform-appset.yaml
@@ -12,7 +12,7 @@ spec:
         revision: main
   template:
     metadata:
-      name: dev-platform-{{.path.basenameNormalized}}
+      name: dev-platform-{{.path.basename}}
       namespace: infraforge-argocd
     spec:
       destination:
