Add: [manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml manifests/platform-cluster/apps/dev/business-apps/nginx/Chart.yaml manifests/platform-cluster/apps/dev/business-apps/nginx/values.yaml manifests/platform-cluster/appsets/dev/business-appset.yaml manifests/platform-cluster/appsets/dev/operator-appset.yaml manifests/platform-cluster/appsets/dev/platform-appset.yaml manifests/platform-cluster/argocd/dev/project.yaml manifests/platform-cluster/metadata.yaml]

--- a/manifests/platform-cluster/appsets/dev/operator-appset.yaml
+++ b/manifests/platform-cluster/appsets/dev/operator-appset.yaml
@@ -10,6 +10,7 @@ spec:
           - path: manifests/platform-cluster/operators/dev/*
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
         revision: main
+  goTemplate: true
   template:
     metadata:
       name: dev-operator-{{.path.basename}}
