--- a/manifests/platform-cluster/appsets/dev/business-appset.yaml
+++ b/manifests/platform-cluster/appsets/dev/business-appset.yaml
@@ -10,6 +10,7 @@ spec:
           - path: manifests/platform-cluster/apps/dev/business-apps/*
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
         revision: main
+  goTemplate: true
   template:
     metadata:
       name: dev-business-{{.path.basename}}
