--- a/infrastructure/argocd/github-repo-secret.yaml
+++ b/infrastructure/argocd/github-repo-secret.yaml
@@ -9,5 +9,5 @@ type: Opaque
 data:
   type: Z2l0  # base64 of "git"
   url: aHR0cHM6Ly9naXRodWIuY29tL05pbWJ1c1Byb1RjaC9QYWFTLVBsYXRmb3Jt  # https://github.com/NimbusProTch/PaaS-Platform
-  password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
-  username: eC1hY2Nlc3MtdG9rZW4=  # x-access-token
+  password: Z2hwX3Q0YzNGamRaUzRmeE9jZm5JZ1dMM25HSG0xa0wycjBieFFmeg==  # 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
+  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
