--- a/infrastructure/kratix/github-credentials.yaml
+++ b/infrastructure/kratix/github-credentials.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: default
 type: Opaque
 data:
-  username: eC1hY2Nlc3MtdG9rZW4=  # x-access-token
-  password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
+  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
+  password: Z2hwX3Q0YzNGamRaUzRmeE9jZm5JZ1dMM25HSG0xa0wycjBieFFmeg==  # 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
 ---
 apiVersion: v1
 kind: Secret
@@ -15,5 +15,5 @@ metadata:
   namespace: kratix-platform-system
 type: Opaque
 data:
-  username: eC1hY2Nlc3MtdG9rZW4=  # x-access-token
-  password: Z2hwX3ZVUEdRYmxvZUxzYU5wbmhjQ3I2S091VkdPSlBWbzQzT2t0Sg==  # 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
+  username: Z2Fza2luaW1idXNwcm8=  # gaskinimbuspro
+  password: Z2hwX3Q0YzNGamRaUzRmeE9jZm5JZ1dMM25HSG0xa0wycjBieFFmeg==  # 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
