--- a/infrastructure/kratix/infraforge-promise.yaml
+++ b/infrastructure/kratix/infraforge-promise.yaml
@@ -165,8 +165,8 @@ spec:
         spec:
           containers:
           - name: infraforge-generator
-            image: docker.io/gaskin23/infraforge-generator:latest
-            imagePullPolicy: IfNotPresent
+            image: infraforge-generator:latest
+            imagePullPolicy: Never
             command: ["/app/generator"]
             env:
             - name: ENABLE_GIT_SYNC
