--- a/manifests/platform-cluster/.kratix/demo-prod-nonprod.yaml
+++ b/manifests/platform-cluster/.kratix/demo-prod-nonprod.yaml
@@ -1,9 +1,9 @@
 apiVersion: platform.kratix.io/v1alpha1
 kind: Work
 metadata:
-  name: demo-dev
+  name: demo-prod
   namespace: kratix-platform-system
 spec:
-  environment: dev
-  generated: "2025-12-14T22:42:07Z"
+  environment: prod
+  generated: "2025-12-14T22:55:01Z"
   tenant: demo
