--- a/manifests/platform-cluster/appsets/prod/business-appset.yaml
+++ b/manifests/platform-cluster/appsets/prod/business-appset.yaml
@@ -1,25 +1,25 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: dev-business-appset
+  name: prod-business-appset
   namespace: infraforge-argocd
 spec:
   generators:
     - git:
         directories:
-          - path: manifests/platform-cluster/apps/dev/business-apps/*
+          - path: manifests/platform-cluster/apps/prod/business-apps/*
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
         revision: main
   goTemplate: true
   template:
     metadata:
-      name: dev-business-{{.path.basename}}
+      name: prod-business-{{.path.basename}}
       namespace: infraforge-argocd
     spec:
       destination:
-        namespace: demo-dev
+        namespace: demo-prod
         server: https://kubernetes.default.svc
-      project: infraforge-dev
+      project: infraforge-prod
       source:
         path: '{{.path.path}}'
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
