Add: [manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml manifests/platform-cluster/appsets/dev/business-appset.yaml manifests/platform-cluster/appsets/dev/operator-appset.yaml manifests/platform-cluster/appsets/dev/platform-appset.yaml manifests/platform-cluster/argocd/dev/project.yaml manifests/platform-cluster/metadata.yaml manifests/platform-cluster/operators/dev/postgresql/postgresql-cluster.yaml]

--- a/manifests/platform-cluster/operators/dev/postgresql/postgresql-cluster.yaml
+++ b/manifests/platform-cluster/operators/dev/postgresql/postgresql-cluster.yaml
@@ -2,11 +2,11 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   labels:
-    environment: prod
+    environment: dev
     managed-by: infraforge
     tenant: demo
   name: demo-postgres
-  namespace: demo-prod
+  namespace: demo-dev
 spec:
   bootstrap:
     initdb:
