--- a/manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml
+++ b/manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml
@@ -1,9 +1,9 @@
 apiVersion: platform.kratix.io/v1alpha1
 kind: Work
 metadata:
-  name: demo-prod
+  name: demo-dev
   namespace: kratix-platform-system
 spec:
-  environment: prod
-  generated: "2025-12-14T22:55:01Z"
+  environment: dev
+  generated: "2025-12-15T07:18:58Z"
   tenant: demo
