--- a/manifests/platform-cluster/appsets/dev/platform-appset.yaml
+++ b/manifests/platform-cluster/appsets/dev/platform-appset.yaml
@@ -1,25 +1,25 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: prod-business-appset
+  name: dev-platform-appset
   namespace: infraforge-argocd
 spec:
   generators:
     - git:
         directories:
-          - path: manifests/platform-cluster/apps/prod/business-apps/*
+          - path: manifests/platform-cluster/apps/dev/platform-apps/*
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
         revision: main
   goTemplate: true
   template:
     metadata:
-      name: prod-business-{{.path.basename}}
+      name: dev-platform-{{.path.basename}}
       namespace: infraforge-argocd
     spec:
       destination:
-        namespace: demo-prod
+        namespace: '{{.path.basename}}'
         server: https://kubernetes.default.svc
-      project: infraforge-prod
+      project: infraforge-dev
       source:
         path: '{{.path.path}}'
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
