--- a/manifests/platform-cluster/argocd/dev/project.yaml
+++ b/manifests/platform-cluster/argocd/dev/project.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: infraforge-prod
+  name: infraforge-dev
   namespace: infraforge-argocd
 spec:
   clusterResourceWhitelist:
     - group: '*'
       kind: '*'
-  description: InfraForge Prod Environment
+  description: InfraForge Dev Environment
   destinations:
     - namespace: '*'
       server: https://kubernetes.default.svc
@@ -17,10 +17,9 @@ spec:
   roles:
     - name: admin
       policies:
-        - p, proj:infraforge-prod:admin, applications, *, infraforge-prod/*, allow
+        - p, proj:infraforge-dev:admin, applications, *, infraforge-dev/*, allow
     - name: developer
       policies:
-        - p, proj:infraforge-prod:developer, applications, get, infraforge-prod/*, allow
-        - p, proj:infraforge-prod:developer, applications, sync, infraforge-prod/*, allow, * * 6-14 * 1-5
+        - p, proj:infraforge-dev:developer, applications, *, infraforge-dev/*, allow
   sourceRepos:
     - '*'
