Add: [manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml manifests/platform-cluster/appsets/dev/business-appset.yaml manifests/platform-cluster/appsets/dev/operator-appset.yaml manifests/platform-cluster/appsets/dev/platform-appset.yaml manifests/platform-cluster/argocd/dev/project.yaml manifests/platform-cluster/metadata.yaml manifests/platform-cluster/operators/dev/postgresql/Chart.yaml manifests/platform-cluster/operators/dev/postgresql/templates/cluster.yaml manifests/platform-cluster/operators/dev/postgresql/values.yaml]

--- a/manifests/platform-cluster/operators/dev/postgresql/values.yaml
+++ b/manifests/platform-cluster/operators/dev/postgresql/values.yaml
@@ -1,18 +1,23 @@
 backup:
   enabled: false
+bootstrap:
+  initdb:
+    database: app
+    owner: app
 clusterName: demo-postgres
 environment: dev
-instances: 1
 monitoring:
   customQueriesConfigMap: []
   enabled: true
 namespace: demo-dev
+postgresVersion: "16.1"
 postgresql:
   parameters:
     effective_cache_size: 512MB
     max_connections: "100"
     shared_buffers: 128MB
     work_mem: 4MB
+replicas: 1
 resources:
   limits:
     cpu: 500m
