--- a/manifests/platform-cluster/.kratix/demo-prod-prod.yaml
+++ b/manifests/platform-cluster/.kratix/demo-prod-prod.yaml
@@ -1,9 +1,9 @@
 apiVersion: platform.kratix.io/v1alpha1
 kind: Work
 metadata:
-  name: demo-dev
+  name: demo-prod
   namespace: kratix-platform-system
 spec:
-  environment: dev
-  generated: "2025-12-15T07:35:21Z"
+  environment: prod
+  generated: "2025-12-15T07:49:34Z"
   tenant: demo
