--- a/manifests/platform-cluster/appsets/prod/business-appset.yaml
+++ b/manifests/platform-cluster/appsets/prod/business-appset.yaml
@@ -1,30 +1,26 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: dev-operator-appset
+  name: prod-business-appset
   namespace: infraforge-argocd
 spec:
   generators:
     - git:
         directories:
-          - path: manifests/platform-cluster/operators/dev/*
+          - path: manifests/platform-cluster/apps/prod/business-apps/*
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
         revision: main
   goTemplate: true
   template:
     metadata:
-      name: dev-operator-{{.path.basename}}
+      name: prod-business-{{.path.basename}}
       namespace: infraforge-argocd
     spec:
       destination:
-        namespace: infraforge-operators
+        namespace: demo-prod
         server: https://kubernetes.default.svc
-      project: infraforge-dev
+      project: infraforge-prod
       source:
-        helm:
-          releaseName: dev-{{.path.basename}}
-          valueFiles:
-            - values.yaml
         path: '{{.path.path}}'
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
         targetRevision: main
