Add: [manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml manifests/platform-cluster/appsets/dev/business-appset.yaml manifests/platform-cluster/appsets/dev/operator-appset.yaml manifests/platform-cluster/appsets/dev/platform-appset.yaml manifests/platform-cluster/argocd/dev/project.yaml manifests/platform-cluster/metadata.yaml manifests/platform-cluster/operators/dev/postgresql/Chart.yaml manifests/platform-cluster/operators/dev/postgresql/templates/cluster.yaml manifests/platform-cluster/operators/dev/postgresql/templates/monitoring.yaml manifests/platform-cluster/operators/dev/postgresql/values.yaml]

--- a/manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml
+++ b/manifests/platform-cluster/.kratix/demo-dev-nonprod.yaml
@@ -1,9 +1,9 @@
 apiVersion: platform.kratix.io/v1alpha1
 kind: Work
 metadata:
-  name: demo-prod
+  name: demo-dev
   namespace: kratix-platform-system
 spec:
-  environment: prod
-  generated: "2025-12-15T07:49:34Z"
+  environment: dev
+  generated: "2025-12-15T08:32:39Z"
   tenant: demo
