--- a/manifests/platform-cluster/appsets/dev/operator-appset.yaml
+++ b/manifests/platform-cluster/appsets/dev/operator-appset.yaml
@@ -1,26 +1,30 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: prod-business-appset
+  name: dev-operator-appset
   namespace: infraforge-argocd
 spec:
   generators:
     - git:
         directories:
-          - path: manifests/platform-cluster/apps/prod/business-apps/*
+          - path: manifests/platform-cluster/operators/dev/*
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
         revision: main
   goTemplate: true
   template:
     metadata:
-      name: prod-business-{{.path.basename}}
+      name: dev-operator-{{.path.basename}}
       namespace: infraforge-argocd
     spec:
       destination:
-        namespace: demo-prod
+        namespace: infraforge-operators
         server: https://kubernetes.default.svc
-      project: infraforge-prod
+      project: infraforge-dev
       source:
+        helm:
+          releaseName: dev-{{.path.basename}}
+          valueFiles:
+            - values.yaml
         path: '{{.path.path}}'
         repoURL: https://github.com/NimbusProTch/PaaS-Platform.git
         targetRevision: main
