--- a/manifests/platform-cluster/operators/dev/postgresql/templates/cluster.yaml
+++ b/manifests/platform-cluster/operators/dev/postgresql/templates/cluster.yaml
@@ -7,24 +7,31 @@ metadata:
     app: postgresql
     tenant: {{ .Values.tenant }}
     environment: {{ .Values.environment }}
-    profile: prod
+    profile: nonprod
     managed-by: infraforge
 spec:
+  # Number of instances
   instances: {{ .Values.replicas }}
 
+  # PostgreSQL version
   imageName: ghcr.io/cloudnative-pg/postgresql:{{ .Values.postgresVersion }}
 
+  # Bootstrap configuration
   bootstrap:
     initdb:
       database: {{ .Values.bootstrap.initdb.database }}
       owner: {{ .Values.bootstrap.initdb.owner }}
+      secret:
+        name: {{ .Values.clusterName }}-app-user
 
+  # Storage configuration
   storage:
     size: {{ .Values.storage.size }}
     {{- if .Values.storage.storageClass }}
     storageClass: {{ .Values.storage.storageClass }}
     {{- end }}
 
+  # Resource limits
   resources:
     requests:
       cpu: {{ .Values.resources.requests.cpu }}
@@ -33,14 +40,36 @@ spec:
       cpu: {{ .Values.resources.limits.cpu }}
       memory: {{ .Values.resources.limits.memory }}
 
+  # PostgreSQL configuration
   postgresql:
     parameters:
       {{- range $key, $value := .Values.postgresql.parameters }}
       {{ $key }}: "{{ $value }}"
       {{- end }}
 
+  # Monitoring configuration
   monitoring:
     enabled: {{ .Values.monitoring.enabled }}
+    {{- if .Values.monitoring.enabled }}
+    podMonitorMetricRelabelings:
+      - sourceLabels: [cluster]
+        targetLabel: cnpg_cluster
+        action: replace
+    {{- end }}
 
+  # Superuser secret (auto-generated)
   superuserSecret:
     name: {{ .Values.clusterName }}-superuser
+
+  # Service configuration
+  managed:
+    roles:
+      - name: {{ .Values.bootstrap.initdb.owner }}
+        ensure: present
+        login: true
+        superuser: false
+        createdb: true
+        createrole: false
+        inherit: true
+
+  # Nonprod: No backup, no advanced HA features
