--- a/manifests/platform-cluster/operators/prod/postgresql/Chart.yaml
+++ b/manifests/platform-cluster/operators/prod/postgresql/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: postgresql-nonprod
-description: PostgreSQL cluster for non-production environments
+name: postgresql-prod
+description: Production-grade PostgreSQL cluster with HA, backup, and connection pooling
 version: 1.0.0
 appVersion: "16.1"
 type: application
@@ -10,6 +10,9 @@ keywords:
   - database
   - sql
   - cloudnativepg
+  - high-availability
+  - backup
+  - production
 
 maintainers:
   - name: InfraForge Platform Team
