--- a/manifests/platform-cluster/.kratix/test-dev-nonprod.yaml
+++ b/manifests/platform-cluster/.kratix/test-dev-nonprod.yaml
@@ -1,9 +1,9 @@
 apiVersion: platform.kratix.io/v1alpha1
 kind: Work
 metadata:
-  name: demo-prod
+  name: test-dev
   namespace: kratix-platform-system
 spec:
-  environment: prod
-  generated: "2025-12-15T08:32:39Z"
-  tenant: demo
+  environment: dev
+  generated: "2025-12-15T08:32:45Z"
+  tenant: test
