--- a/manifests/platform-cluster/operators/dev/postgresql/Chart.yaml
+++ b/manifests/platform-cluster/operators/dev/postgresql/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: postgresql-prod
-description: Production-grade PostgreSQL cluster with HA, backup, and connection pooling
+name: postgresql-nonprod
+description: PostgreSQL cluster for non-production environments
 version: 1.0.0
 appVersion: "16.1"
 type: application
@@ -10,9 +10,6 @@ keywords:
   - database
   - sql
   - cloudnativepg
-  - high-availability
-  - backup
-  - production
 
 maintainers:
   - name: InfraForge Platform Team
