--- a/manifests/platform-cluster/operators/prod/postgresql/templates/cluster.yaml
+++ b/manifests/platform-cluster/operators/prod/postgresql/templates/cluster.yaml
@@ -67,14 +67,14 @@ spec:
   {{- end }}
 
   # Monitoring configuration
+  {{- if .Values.monitoring.enabled }}
   monitoring:
-    enabled: {{ .Values.monitoring.enabled }}
-    {{- if .Values.monitoring.enabled }}
+    enabled: true
     podMonitorMetricRelabelings:
       - sourceLabels: [cluster]
         targetLabel: cnpg_cluster
         action: replace
-    {{- end }}
+  {{- end }}
 
   # Backup to S3/MinIO
   {{- if .Values.backup.enabled }}
