--- a/manifests/platform-cluster/operators/dev/postgresql/templates/cluster.yaml
+++ b/manifests/platform-cluster/operators/dev/postgresql/templates/cluster.yaml
@@ -21,8 +21,10 @@ spec:
     initdb:
       database: {{ .Values.bootstrap.initdb.database }}
       owner: {{ .Values.bootstrap.initdb.owner }}
-      secret:
-        name: {{ .Values.clusterName }}-app-user
+      dataChecksums: true
+      encoding: UTF8
+      localeCollate: en_US.utf8
+      localeCType: en_US.utf8
 
   # Storage configuration
   storage:
@@ -48,14 +50,14 @@ spec:
       {{- end }}
 
   # Monitoring configuration
+  {{- if .Values.monitoring.enabled }}
   monitoring:
-    enabled: {{ .Values.monitoring.enabled }}
-    {{- if .Values.monitoring.enabled }}
+    enabled: true
     podMonitorMetricRelabelings:
       - sourceLabels: [cluster]
         targetLabel: cnpg_cluster
         action: replace
-    {{- end }}
+  {{- end }}
 
   # Superuser secret (auto-generated)
   superuserSecret:
