--- a/manifests/platform-cluster/operators/prod/vault/values.yaml
+++ b/manifests/platform-cluster/operators/prod/vault/values.yaml
@@ -4,19 +4,19 @@ namespace: demo-prod
 tenant: demo
 environment: prod
 
-replicas: 3
+replicas: 1
 
 storage:
-  size: "10Gi"
+  size: "5Gi"
   storageClass: "standard"
 
 resources:
   requests:
+    cpu: "100m"
+    memory: "256Mi"
+  limits:
     cpu: "500m"
     memory: "512Mi"
-  limits:
-    cpu: "1000m"
-    memory: "1Gi"
 
 ui:
   enabled: true
