--- a/manifests/platform-cluster/operators/prod/minio/values.yaml
+++ b/manifests/platform-cluster/operators/prod/minio/values.yaml
@@ -4,17 +4,17 @@ namespace: demo-prod
 tenant: demo
 environment: prod
 
-replicas: 4
-volumesPerServer: 4
+replicas: 2
+volumesPerServer: 2
 
 storage:
-  size: "50Gi"
+  size: "10Gi"
   storageClass: "standard"
 
 resources:
   requests:
-    cpu: "1000m"
-    memory: "2Gi"
+    cpu: "250m"
+    memory: "512Mi"
   limits:
-    cpu: "2000m"
-    memory: "4Gi"
+    cpu: "500m"
+    memory: "1Gi"
