Fix Vault prod config - use file storage instead of Raft
- Changed from Raft to file storage for single replica
- Added disable_mlock to prevent IPC_LOCK issues
- Removed unnecessary cluster_addr and api_addr

--- a/manifests/platform-cluster/operators/prod/vault/templates/vault.yaml
+++ b/manifests/platform-cluster/operators/prod/vault/templates/vault.yaml
@@ -10,11 +10,10 @@ data:
       address = "0.0.0.0:8400"
       tls_disable = 1
     }
-    storage "raft" {
+    storage "file" {
       path = "/vault/data"
     }
-    cluster_addr = "http://POD_IP:8201"
-    api_addr = "http://POD_IP:8200"
+    disable_mlock = true
 ---
 apiVersion: apps/v1
 kind: StatefulSet
