Complete platform setup with auto-generated secrets and documentation
- Added secret templates for PostgreSQL and MinIO (auto-generated passwords)
- Updated MinIO tenant configs to use secrets
- Created comprehensive setup.sh script for one-command installation
- Added detailed PLATFORM_README.md with:
  - Installation instructions
  - Architecture overview
  - Service access guides
  - Troubleshooting tips
  - Resource allocations

Now the platform can be fully deployed from scratch with:
git clone repo && ./setup.sh

All secrets are auto-generated, no manual intervention needed!

--- a/manifests/platform-cluster/operators/prod/minio/templates/tenant.yaml
+++ b/manifests/platform-cluster/operators/prod/minio/templates/tenant.yaml
@@ -10,6 +10,8 @@ metadata:
     profile: prod
     managed-by: infraforge
 spec:
+  configuration:
+    name: {{ .Values.clusterName }}-env-configuration
   pools:
     - servers: {{ .Values.replicas }}
       name: pool-0
