--- a/manifests/platform-cluster/operators/dev/minio/templates/tenant.yaml
+++ b/manifests/platform-cluster/operators/dev/minio/templates/tenant.yaml
@@ -10,6 +10,8 @@ metadata:
     profile: nonprod
     managed-by: infraforge
 spec:
+  configuration:
+    name: {{ .Values.clusterName }}-env-configuration
   pools:
     - servers: {{ .Values.replicas }}
       name: pool-0
