--- a/k8s-manifests/microservices/notification-service.yaml
+++ b/k8s-manifests/microservices/notification-service.yaml
@@ -8,7 +8,7 @@ metadata:
     app: notification-service
     version: v1
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: notification-service
@@ -24,12 +24,25 @@ spec:
     spec:
       containers:
       - name: notification-service
-        image: notification-service:latest
-        imagePullPolicy: IfNotPresent
+        image: microservices-notification-service:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8084
           name: http
         env:
+        - name: DB_HOST
+          value: "postgresql.infrastructure"
+        - name: DB_PORT
+          value: "5432"
+        - name: DB_USER
+          value: "postgres"
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: db-secret
+              key: password
+        - name: DB_NAME
+          value: "notifications"
         - name: RABBITMQ_URL
           value: "amqp://rabbitmq:rabbitmq@rabbitmq.infrastructure:5672/"
         - name: SMTP_HOST
