--- a/k8s-manifests/microservices/order-service.yaml
+++ b/k8s-manifests/microservices/order-service.yaml
@@ -8,7 +8,7 @@ metadata:
     app: order-service
     version: v1
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: order-service
@@ -24,8 +24,8 @@ spec:
     spec:
       containers:
       - name: order-service
-        image: order-service:latest
-        imagePullPolicy: IfNotPresent
+        image: microservices-order-service:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8082
           name: http
