--- a/k8s-manifests/microservices/payment-service.yaml
+++ b/k8s-manifests/microservices/payment-service.yaml
@@ -8,7 +8,7 @@ metadata:
     app: payment-service
     version: v1
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: payment-service
@@ -24,8 +24,8 @@ spec:
     spec:
       containers:
       - name: payment-service
-        image: payment-service:latest
-        imagePullPolicy: IfNotPresent
+        image: microservices-payment-service:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8083
           name: http
@@ -50,10 +50,18 @@ spec:
             secretKeyRef:
               name: stripe-secret
               key: secret-key
-        - name: RABBITMQ_URL
+        - name: REDIS_URL
+          value: "redis://:redis123@redis.infrastructure:6379"
+        - name: REDIS_HOST
+          value: "redis.infrastructure"
+        - name: REDIS_PORT
+          value: "6379"
+        - name: REDIS_PASSWORD
+          value: "redis123"
+        - name: AMQP_URL
           value: "amqp://rabbitmq:rabbitmq@rabbitmq.infrastructure:5672/"
         - name: JAEGER_ENDPOINT
-          value: "http://jaeger-collector.infrastructure:14268"
+          value: "http://jaeger-collector.infrastructure:14268/api/traces"
         resources:
           requests:
             memory: "128Mi"
@@ -67,12 +75,6 @@ spec:
             port: 8083
           initialDelaySeconds: 30
           periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /ready
-            port: 8083
-          initialDelaySeconds: 5
-          periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
