--- a/microservices/payment-service/Dockerfile
+++ b/microservices/payment-service/Dockerfile
@@ -25,8 +25,8 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Install dumb-init for proper signal handling
-RUN apk add --no-cache dumb-init
+# Install dumb-init for proper signal handling and OpenSSL for Prisma
+RUN apk add --no-cache dumb-init openssl openssl-dev libc6-compat
 
 # Create non-root user
 RUN addgroup -g 1001 -S app && \
