feat: Add charts-path parameter and complete GitOps internal URL fixes
Major changes:
- Add --charts-path parameter to operator for bootstrap
- Simplify Gitea deployment (SQLite, no HA cluster)
- Add automated token generation via init job
- Fix internal communication with cluster URLs
- Add ConstructCloneURL() method in Gitea client
- Update all controllers to use internal URLs
- Fix metrics collector compilation error (app.Version -> app.Image.Tag)
- Add deployment scripts (deploy-gitea.sh, deploy-argocd.sh, etc.)
- Add kustomization configs for deployment
- Update CLAUDE.md with session documentation

Bootstrap Status: 90% complete - ready to test with charts-path parameter

--- a/infrastructure/platform-operator/Dockerfile
+++ b/infrastructure/platform-operator/Dockerfile
@@ -25,9 +25,8 @@ WORKDIR /
 COPY --from=builder /workspace/manager .
 
 # Copy charts from project root (build context is project root)
-# These will be embedded and available at /charts and /platform-charts
+# Charts contain both microservice and platform templates
 COPY charts/ /charts/
-COPY platform-charts/ /platform-charts/
 
 USER 65532:65532
 
