--- a/infrastructure/platform-operator/config/crd/bases/platform.infraforge.io_platformclaims.yaml
+++ b/infrastructure/platform-operator/config/crd/bases/platform.infraforge.io_platformclaims.yaml
@@ -114,8 +114,7 @@ spec:
                           description: Repository Helm repository URL (if external)
                           type: string
                         source:
-                          description: Source chart source (embedded, bitnami, elastic,
-                            etc.)
+                          description: Source chart source (embedded, github, helm-repo)
                           type: string
                         version:
                           description: Version chart version
