--- a/infrastructure/platform-operator/config/manager/deployment.yaml
+++ b/infrastructure/platform-operator/config/manager/deployment.yaml
@@ -1,39 +1,35 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: platform-system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: platform-operator
-  namespace: platform-system
+  name: controller-manager
   labels:
-    app: platform-operator
+    control-plane: controller-manager
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: platform-operator
+      control-plane: controller-manager
   template:
     metadata:
       labels:
-        app: platform-operator
+        control-plane: controller-manager
     spec:
       serviceAccountName: platform-operator
-      imagePullSecrets:
-      - name: ghcr-secret
       containers:
       - name: manager
-        image: ghcr.io/nimbusprotch/platform-operator:latest
-        imagePullPolicy: Always
+        image: controller:latest
+        imagePullPolicy: IfNotPresent
         args:
         - --leader-elect
+        - --gitea-url=http://gitea-http.gitea.svc.cluster.local:3000
+        - --gitea-username=gitea_admin
         env:
-        - name: GITHUB_TOKEN
-          value: "dummy-token"  # Will be replaced with secret later
-        - name: IMAGE_REGISTRY
-          value: "ghcr.io/nimbusprotch"  # Default: GHCR with org name (change to your own)
+        - name: GITEA_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: gitea-token
+              key: token
+              optional: false
         resources:
           limits:
             cpu: 500m
@@ -65,7 +61,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: platform-operator
-  namespace: platform-system
+  namespace: platform-operator-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -104,6 +100,8 @@ rules:
   - platform.infraforge.io
   resources:
   - applicationclaims
+  - bootstrapclaims
+  - platformclaims
   verbs:
   - get
   - list
@@ -116,6 +114,8 @@ rules:
   - platform.infraforge.io
   resources:
   - applicationclaims/status
+  - bootstrapclaims/status
+  - platformclaims/status
   verbs:
   - get
   - update
@@ -124,6 +124,8 @@ rules:
   - platform.infraforge.io
   resources:
   - applicationclaims/finalizers
+  - bootstrapclaims/finalizers
+  - platformclaims/finalizers
   verbs:
   - update
 - apiGroups:
@@ -171,4 +173,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: platform-operator
-  namespace: platform-system
+  namespace: platform-operator-system
