--- a/deployments/dev/platform-infrastructure-claim.yaml
+++ b/deployments/dev/platform-infrastructure-claim.yaml
@@ -26,7 +26,7 @@ spec:
       size: medium
       chart:
         name: postgresql
-        repository: charts
+        version: "1.0.0"
       values:
         persistence:
           size: 20Gi
@@ -44,7 +44,7 @@ spec:
       size: small
       chart:
         name: postgresql
-        repository: charts
+        version: "1.0.0"
       values:
         persistence:
           size: 10Gi
@@ -62,7 +62,7 @@ spec:
       size: medium
       chart:
         name: postgresql
-        repository: charts
+        version: "1.0.0"
       values:
         persistence:
           size: 20Gi
@@ -80,7 +80,7 @@ spec:
       size: small
       chart:
         name: postgresql
-        repository: charts
+        version: "1.0.0"
       values:
         persistence:
           size: 10Gi
@@ -98,7 +98,7 @@ spec:
       size: small
       chart:
         name: postgresql
-        repository: charts
+        version: "1.0.0"
       values:
         persistence:
           size: 5Gi
@@ -117,7 +117,7 @@ spec:
       size: small
       chart:
         name: redis
-        repository: charts
+        version: "1.0.0"
       values:
         persistence:
           size: 5Gi
@@ -135,7 +135,7 @@ spec:
       size: medium
       chart:
         name: rabbitmq
-        repository: charts
+        version: "1.0.0"
       values:
         persistence:
           size: 10Gi
@@ -153,7 +153,7 @@ spec:
       size: large
       chart:
         name: elasticsearch
-        repository: charts
+        version: "1.0.0"
       values:
         persistence:
           size: 30Gi
